fixed missing padding right for code examples

--- a/template_01/style.css
+++ b/template_01/style.css
@@ -1760,6 +1760,7 @@ table.hljs-ln tr:hover {
 
 .hljs-ln td.hljs-ln-code {
   padding-left: 20px !important;
+  padding-right: 20px !important;
   white-space: pre !important;
 }
 
